[gd_scene load_steps=3 format=3 uid="uid://br7bpjtj0k4n2"]

[ext_resource type="Script" path="res://OutRun/Menus/GameOverMenu.gd" id="1_4rwmw"]

[sub_resource type="LabelSettings" id="LabelSettings_6nvhm"]
font_size = 50

[node name="GameOverMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4rwmw")
level_scene = "res://OutRun/Levels/Basic/Basic.tscn"
main_menu_scene = "res://OutRun/Menus/MainMenu.tscn"
controls_scene = "res://OutRun/Menus/ControlsMenu.tscn"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -159.0
offset_top = -157.5
offset_right = 159.0
offset_bottom = 157.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="HighestScoreText" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Highest Score: 0"
label_settings = SubResource("LabelSettings_6nvhm")
horizontal_alignment = 1

[node name="GameOverScoreText" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Your Score: 0"
label_settings = SubResource("LabelSettings_6nvhm")
horizontal_alignment = 1

[node name="Retry" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
theme_override_font_sizes/font_size = 50
text = "Retry"

[node name="Controls" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Controls"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Retry")
theme_override_font_sizes/font_size = 50
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
